ecmascript/parser/tests/test262-error-references/fail/943297e7b6314bd8.module.js.stderr
error: Expected as, got Some(As)
 --> $DIR/tests/test262-parser/fail/943297e7b6314bd8.module.js:1:10
  |
1 | import * As a from 'a'
  |          ^^

